--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,7 +57,7 @@
 					}
 			],
 			"max-statements": "error",
-			// "no-console": "error",
+			"no-console": "error",
 			"no-else-return": "error",
 			"no-eval": "error",
 			"no-implicit-globals": "error",
