--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "redis": "^3.0.2",
     "sinon": "^8.1.1",
     "supertest": "^4.0.2"
   },
