--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "export DATA_STORE=test/resources/comments.json; nyc mocha",
-    "start": "export DATA_STORE=data/comments.json; node server.js"
+    "start": "mkdir -p data; export DATA_STORE=data/comments.json; node server.js"
   },
   "repository": {
     "type": "git",
